# wiki-embedded

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: docker.yml  test.yml
examples/: test_compiled_bundle.py
src/wiki_embedded_mcp/: __init__.py  _logging.py  compile.py  embedder.py  index.py  loader.py  prompts.py  resources.py  server.py
tests/: conftest.py  test_compile.py  test_index.py  test_loader.py  test_prompts.py  test_resources.py
